ci: :sparkles: add sonar cloud with fix in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=go-project
+sonar.projectKey=trantor-si_fc-sonarcloud
+sonar.organization=trantor-si
 
 sonar.sources=.
 sonar.exclusions=**/*test.go
